Particially fix the nav bar on mobile, currently tapping on the div will close the nav bar instead of just tapping on the X

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     font-family: Helvetica, serif;
     font-optical-sizing: auto;
     font-style: normal;
-    height: 300vh;
+    height: 100vh;
 	line-height: 1;
 }
 ol, ul {
@@ -52,8 +52,10 @@ table {
 }
 
 :root{
+    --navbar-height: 60px;
     --bg: white;
-    --text-color-color: black;
+    --color: black;
+    --navbar--transition-duration: 0.3s;
     --h1-size: 48px;
     --h2-size: 36px;
     --h3-size: 24px;
@@ -62,7 +64,7 @@ table {
 
 .dark{
     --bg: #2e2e2e;
-    --text-color: #e0e0e0;
+    --color: #e0e0e0;
 }
 
 h1{
@@ -78,89 +80,102 @@ p{
     font-size: var(--p-size);
 }
 
-#nav-bar-container {
-    display: flex;
-    width: auto;
-    max-width: 1600px;
-    height: auto;
+#navbar {
+    background-color: var(--bg);
+    color: var(--color);
     position: sticky;
     top: 0;
-    left: 0;
-    user-select: none;
 }
 
-.nav-bar{
+#navbar, #navbar button{
+    font-size: 14px;
+}
+
+.navbar__content{
     display: flex;
-    width: 100%;
-    background-color: var(--bg);
-    color: var(--text-color);
-    min-height: 40px;
-    height: auto;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 20px;
-    box-shadow: 0px 4px 4px 3px rgba(0, 0, 0, 0.25);
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 0.5rem 1.5rem;
 }
-
-.nav-bar-menu{
+.navbar__home{
     display: flex;
+    align-items: center;
+    transition: opacity var(--navbar--transition-duration);
+}
+.navbar__home:hover{
+    opacity: 0.8;
+}
+.navbar__menu{
+    display: flex;
+    gap: 30px;
+    list-style: none;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    align-items: center;
-    height: auto;
-    white-space: nowrap;
+    transform: translate(-50%,-50%);
 }
-
-.nav-bar-menu div{
-    padding: 0 20px;
-}
-
-.contactinfo{
+.navbar__item{
     position: relative;
-}
-.dropdown-menu {
-    display: none;
-    list-style: none;
-}
-
-.dropdown-menu li{
-    position: absolute;
-    display: block;
-    top: 100%;
-}
-
-
-
-.nav-bar-icons{
     display: flex;
     align-items: center;
 }
-
-
-a{
+.navbar__link{
+    color: var(--color);
     text-decoration: none;
-    color: var(--text-color);
+    cursor: pointer;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    padding: 0;
+}
+.navbar__submenu{
+    position: absolute;
+    top: 100%;
+    left: -25%;
+    background-color: var(--bg);
+    color: var(--color);
+    visibility: hidden;
+    width: 150%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 0;
+    opacity: 0;
+    transform: translateY(-5px);
+    transition: all var(--navbar--transition-duration);
+    z-index: 2;
+}
+.navbar__dropdown:hover .navbar__submenu{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+.navbar__sublink{
+    display: block;
+    padding: 0.5rem 1rem;
+}
+.navbar__theme-toggle{
+    border: none;
+    background: none;
+    color: var(--color);
+    padding: 0;
 }
 
-a:hover{
+a, a:hover, a:visited{
     text-decoration: none;
-    color: var(--text-color);
-}
-
-a:visited{
-    text-decoration: none;
-    color: var(--text-color);
+    color: var(--color);
 }
 
 .hidden{
-    display: none;
+    display: none !important;
 }
 
 .material-symbols-outlined {
     cursor: pointer;
     margin: 0 10px;
+    font-size: 20px !important;
   font-variation-settings:
   'FILL' 0,
   'wght' 300,
@@ -168,11 +183,54 @@ a:visited{
   'opsz' 24
 }
 
+.navbar__hamburger{
+    display: none;
+}
+
+@media screen and (max-width: 768px){
+    .navbar__menu, .navbar__actions{
+        display: none;
+    }
+    .navbar__content{
+        padding: 10px 5px;
+    }
+    .navbar__hamburger{
+        display: flex;
+        align-items: center;
+        /* position: relative; */
+    }
+    .navbar__hamburger-submenu{
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        top: 0;
+        right: 0;
+        width: 50%;
+        padding: 1rem 0.5rem;
+        box-sizing: border-box;
+        height: 100vh;
+        background-color: var(--bg);
+        outline: 1px solid var(--color);
+        z-index: 4;
+        visibility: visible;
+        opacity: 1;
+    }
+    .navbar__hamburger-content{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 1rem;
+    }
+    .navbar__hamburger .navbar__hamburger-submenu{
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
 .main-container{
     display: flex;
     justify-content: center;
     padding: 20px;
-    background-color: #E0E0E0;
 }
 
 .grid-layout{
